<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="dollar">DOLLAR</string>
    <string name="euro">EURO</string>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="real">REAL</string>
    <string name="estate">ESTATE</string>
    <string name="manager">MANAGER</string>


    <!-- Spinners -->
    <string name="spinners_select_one">--SELECT--</string>
    <string name="spinners_type">TYPE</string>
    <string name="spinners_rooms">ROOMS</string>
    <string name="spinners_bedrooms">BEDROOMS</string>
    <string name="spinners_bathrooms">BATHROOMS</string>
    <string name="spinners_country">COUNTRY</string>
    <string name="spinners_state">STATE</string>
    <string name="spinners_estate_agent">ESTATE AGENT</string>

    <!-- Spinner STATE -->
    <string name="sold_out">Sold out</string>

    <!-- Add and Edit Housing Fragment -->
    <string name="price">PRICE</string>
    <string name="area">AREA</string>
    <string name="address">ADDRESS</string>
    <string name="zip_code">ZIP CODE</string>
    <string name="city">CITY</string>
    <string name="description">DESCRIPTION</string>
    <string name="not_specify">Not specify</string>
    <string name="photos">PHOTOS</string>
    <string name="type_star">TYPE *</string>
    <string name="area_star">AREA *</string>
    <string name="price_star">PRICE *</string>
    <string name="state_star">STATE *</string>

    <!-- Add Estate Housing Fragment -->
    <string name="last_name">LAST NAME</string>
    <string name="first_name">FIRST NAME</string>
    <string name="email">EMAIL</string>
    <string name="phone_number">PHONE NUMBER</string>

    <!-- Filter Fragment -->
    <string name="date_entry">DATE ENTRY</string>
    <string name="date_sale">DATE SALE</string>
    <string name="around">AROUND</string>
    <string name="nb_photos">NB PHOTOS</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>

    <!-- DetailFragment -->
    <string name="added_date">Added date : </string>
    <string name="sold_date">Sold date : </string>
    <string name="type">TYPE</string>
    <string name="nb_rooms">NB ROOMS</string>
    <string name="bedrooms">BEDROOMS</string>
    <string name="bathrooms">BATHROOMS</string>
    <string name="point_of_interest">POINT OF INTEREST</string>
    <string name="estate_agent">ESTATE AGENT</string>
    <string name="no_housing_selected">No housing selected</string>

    <!-- Settings Fragment -->
    <string name="notifications">NOTIFICATIONS</string>
    <string name="currency">CURRENCY</string>

    <!-- Poi Type -->
    <string name="restaurant">restaurant</string>
    <string name="school">school</string>
    <string name="store">store</string>
    <string name="subway">subway</string>
    <string name="park">park</string>
    <string name="museum">museum</string>
    <string name="doctor">doctor</string>
    <string name="bank">bank</string>
    <string name="airport">airport</string>
    <string name="bar">bar</string>
    <string name="hospital">hospital</string>
    <string name="gym">gym</string>
    <string name="spa">spa</string>
    <string name="train_station">train_station</string>
    <string name="train">train</string>

    <!-- Notification -->
    <string name="notification_housing_add">Added successfully !</string>

    <!-- Menu Drawer -->
    <string name="home">HOME</string>
    <string name="settings">SETTINGS</string>
    <string name="add_housing">ADD HOUSING</string>
    <string name="manage_estate_agent">MANAGE ESTATE AGENT</string>
    <string name="filter">FILTER</string>

    <!-- Toast -->
    <string name="toast_no_photo">You have to add a photo first !</string>
    <string name="toast_invalid_address">Invalid address</string>
    <string name="toast_estate_agent_same_name">An Estate Agent has already this last name</string>
    <string name="toast_estate_agent_no_name">Please enter the last name first</string>
    <string name="toast_internet_no_available">No connection available</string>

    <!-- AlertDialog -->
    <string name="sure_delete">Please confirm your deletion</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="my_position">My position</string>


    <!-- Content Description Photos -->
    <string name="add_a_photo_from_the_gallery">Add a photo from the gallery</string>
    <string name="add_a_photo_from_the_camera">Add a photo from the camera</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="final_add_photo">Final add Photo</string>
    <string name="add_an_estate_agent">Add an estate agent</string>
    <string name="this_housing_don_t_have_photos">This housing don\'t have photos</string>
    <string name="map">Map</string>
    <string name="calendar">calendar</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="photo">Photo</string>
    <string name="icon">Icon</string>
    <string name="logo">Logo</string>
    <string name="area_m2_mandatory">AREA : M2 (mandatory)</string>
    <string name="price_mandatory">PRICE (mandatory)</string>


</resources>
