<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".views.fragments.ListFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_fragment_rcv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_housing"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/list_fragment_map_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_map_24"
            app:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    

    </androidx.constraintlayout.widget.ConstraintLayout>
