...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_estate_agent_separator_view"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_estate_agent_add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        app:fabSize="mini"
        android:src="@drawable/ic_baseline_add_48"
        app:backgroundTint="@color/colorPrimary"
...
