...


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fragment_filter_search_fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_baseline_search_24"
    android:scaleType="center"
    app:fabSize="mini"
    app:backgroundTint="@color/colorPrimary"
...
